Replace CODE-REVIEW.md with focused analysis on dead code, duplication, and complexity reduction
Co-authored-by: HungLo2020 <159678011+HungLo2020@users.noreply.github.com>